<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_res"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="end|center_vertical"
        android:textSize="24sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="5"
        android:columnCount="4"
        android:rowCount="4">

        <Button
            android:id="@+id/button_7"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/seven_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_8"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/eight_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_9"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/nine_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_div"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/division_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_4"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/four_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_5"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/five_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_6"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/six_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_mlp"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/multiplication_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_1"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/one_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_2"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/two_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_3"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/three_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_sub"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/subtraction_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_0"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/zero_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_bs"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/backspace_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_res"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/result_button_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_add"
            style="@style/ButtonStyle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/addition_button_text"
            tools:ignore="VisualLintButtonSize" />

    </GridLayout>

</LinearLayout>